# check_deployment

backend/: README.md  main.py  pyproject.toml
backend/.runtime/codex_data/global_config/: llm_backends.yaml
backend/.runtime/codex_data/read_dir/codex_configs_md/: AGENTS.md  REFERENCE.md
backend/.runtime/codex_data/sessions/user-123/2f8bbbf8-c367-4011-b5b5-0cf37e61cef2/CODEX_HOME/: config.toml
backend/.runtime/codex_data/sessions/user-123/2f8bbbf8-c367-4011-b5b5-0cf37e61cef2/CODEX_HOME/sessions/2025/11/08/: rollout-2025-11-08T08-47-46-019a626f-8367-7622-9b50-5521a6a8d97a.jsonl
backend/.runtime/codex_data/sessions/user-123/2f8bbbf8-c367-4011-b5b5-0cf37e61cef2/workspace/: codex_configs_md
backend/.runtime/codex_data/sessions/user-123/e9438776-9186-4222-aa68-5edc1e0dab3b/CODEX_HOME/sessions/2025/11/08/: rollout-2025-11-08T07-21-07-019a6220-2eae-7191-a873-532861a245f9.jsonl
backend/.runtime/codex_runtime/: .venv-libs.json
backend/.runtime/db/: chat.sqlite
backend/app/: __init__.py  codex.py  config.py  db.py  gateway.py  models.py  prompts.py  runtime.py  schemas.py  server.py
backend/config/codex_configs_md/: AGENTS.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  App.test.js  api.js  index.css
frontend/src/components/: PromptLibrary.js
frontend/src/components/chat/: ChatView.jsx  PromptCard.jsx  PromptForm.jsx  PromptLibrary.jsx  PromptPreview.jsx  api.js
frontend/src/pages/: Chat.jsx
